src-sjc/sjc/parser/StaticJavaParser.java
// $ANTLR 3.4 /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g 2012-11-15 19:51:57

package sjc.parser;

import java.math.BigInteger;

/**
 * StaticJava parser.
 *
 * @author robby
 */


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class StaticJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "NUM_INT", "WS", "'!'", "'!='", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'boolean'", "'class'", "'else'", "'false'", "'if'", "'int'", "'null'", "'public'", "'return'", "'static'", "'true'", "'void'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int ID=4;
    public static final int NUM_INT=5;
    public static final int WS=6;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public StaticJavaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public StaticJavaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[71+1];
         

    }

    public String[] getTokenNames() { return StaticJavaParser.tokenNames; }
    public String getGrammarFileName() { return "/home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g"; }


    protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
     throws RecognitionException
    {
     throw new MismatchedTokenException(ttype, input);
    }

    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow)
     throws RecognitionException
    {
     throw e;
    }



    // $ANTLR start "compilationUnit"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:53:1: compilationUnit : classDefinition EOF ;
    public final void compilationUnit() throws RecognitionException {
        int compilationUnit_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:54:2: ( classDefinition EOF )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:54:4: classDefinition EOF
            {
            pushFollow(FOLLOW_classDefinition_in_compilationUnit55);
            classDefinition();

            state._fsp--;
            if (state.failed) return ;

            match(input,EOF,FOLLOW_EOF_in_compilationUnit59); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "compilationUnit"



    // $ANTLR start "classDefinition"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:58:1: classDefinition : 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}' ;
    public final void classDefinition() throws RecognitionException {
        int classDefinition_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:59:2: ( 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:59:4: 'public' 'class' ID '{' mainMethodDeclaration ( fieldDeclaration | methodDeclaration )* '}'
            {
            match(input,35,FOLLOW_35_in_classDefinition70); if (state.failed) return ;

            match(input,29,FOLLOW_29_in_classDefinition72); if (state.failed) return ;

            match(input,ID,FOLLOW_ID_in_classDefinition74); if (state.failed) return ;

            match(input,41,FOLLOW_41_in_classDefinition76); if (state.failed) return ;

            pushFollow(FOLLOW_mainMethodDeclaration_in_classDefinition81);
            mainMethodDeclaration();

            state._fsp--;
            if (state.failed) return ;

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:61:3: ( fieldDeclaration | methodDeclaration )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==37) ) {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==28||LA1_2==33) ) {
                        int LA1_3 = input.LA(3);

                        if ( (LA1_3==ID) ) {
                            int LA1_5 = input.LA(4);

                            if ( (LA1_5==19) ) {
                                alt1=1;
                            }
                            else if ( (LA1_5==11) ) {
                                alt1=2;
                            }


                        }


                    }
                    else if ( (LA1_2==39) ) {
                        alt1=2;
                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:61:5: fieldDeclaration
            	    {
            	    pushFollow(FOLLOW_fieldDeclaration_in_classDefinition87);
            	    fieldDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;
            	case 2 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:62:5: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_classDefinition93);
            	    methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            match(input,43,FOLLOW_43_in_classDefinition100); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, classDefinition_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "classDefinition"



    // $ANTLR start "mainMethodDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:66:1: mainMethodDeclaration : 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}? ID ')' '{' methodBody '}' ;
    public final void mainMethodDeclaration() throws RecognitionException {
        int mainMethodDeclaration_StartIndex = input.index();

        Token id1=null;
        Token id2=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:67:2: ( 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}? ID ')' '{' methodBody '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:67:4: 'public' 'static' 'void' id1= ID {...}? '(' id2= ID '[' ']' {...}? ID ')' '{' methodBody '}'
            {
            match(input,35,FOLLOW_35_in_mainMethodDeclaration111); if (state.failed) return ;

            match(input,37,FOLLOW_37_in_mainMethodDeclaration113); if (state.failed) return ;

            match(input,39,FOLLOW_39_in_mainMethodDeclaration115); if (state.failed) return ;

            id1=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration124); if (state.failed) return ;

            if ( !(( "main".equals(id1.getText()) )) ) {
                if (state.backtracking>0) {state.failed=true; return ;}
                throw new FailedPredicateException(input, "mainMethodDeclaration", " \"main\".equals(id1.getText()) ");
            }

            match(input,11,FOLLOW_11_in_mainMethodDeclaration139); if (state.failed) return ;

            id2=(Token)match(input,ID,FOLLOW_ID_in_mainMethodDeclaration143); if (state.failed) return ;

            match(input,26,FOLLOW_26_in_mainMethodDeclaration145); if (state.failed) return ;

            match(input,27,FOLLOW_27_in_mainMethodDeclaration147); if (state.failed) return ;

            if ( !(( "String".equals(id2.getText()) )) ) {
                if (state.backtracking>0) {state.failed=true; return ;}
                throw new FailedPredicateException(input, "mainMethodDeclaration", " \"String\".equals(id2.getText()) ");
            }

            match(input,ID,FOLLOW_ID_in_mainMethodDeclaration162); if (state.failed) return ;

            match(input,12,FOLLOW_12_in_mainMethodDeclaration169); if (state.failed) return ;

            match(input,41,FOLLOW_41_in_mainMethodDeclaration171); if (state.failed) return ;

            pushFollow(FOLLOW_methodBody_in_mainMethodDeclaration173);
            methodBody();

            state._fsp--;
            if (state.failed) return ;

            match(input,43,FOLLOW_43_in_mainMethodDeclaration175); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, mainMethodDeclaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "mainMethodDeclaration"



    // $ANTLR start "fieldDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:76:1: fieldDeclaration : 'static' type ID ';' ;
    public final void fieldDeclaration() throws RecognitionException {
        int fieldDeclaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:77:2: ( 'static' type ID ';' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:77:4: 'static' type ID ';'
            {
            match(input,37,FOLLOW_37_in_fieldDeclaration187); if (state.failed) return ;

            pushFollow(FOLLOW_type_in_fieldDeclaration189);
            type();

            state._fsp--;
            if (state.failed) return ;

            match(input,ID,FOLLOW_ID_in_fieldDeclaration191); if (state.failed) return ;

            match(input,19,FOLLOW_19_in_fieldDeclaration193); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, fieldDeclaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "fieldDeclaration"



    // $ANTLR start "methodDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:80:1: methodDeclaration : 'static' returnType ID '(' ( params )? ')' '{' methodBody '}' ;
    public final void methodDeclaration() throws RecognitionException {
        int methodDeclaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:81:2: ( 'static' returnType ID '(' ( params )? ')' '{' methodBody '}' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:81:4: 'static' returnType ID '(' ( params )? ')' '{' methodBody '}'
            {
            match(input,37,FOLLOW_37_in_methodDeclaration205); if (state.failed) return ;

            pushFollow(FOLLOW_returnType_in_methodDeclaration207);
            returnType();

            state._fsp--;
            if (state.failed) return ;

            match(input,ID,FOLLOW_ID_in_methodDeclaration209); if (state.failed) return ;

            match(input,11,FOLLOW_11_in_methodDeclaration213); if (state.failed) return ;

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:82:7: ( params )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==28||LA2_0==33) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:82:9: params
                    {
                    pushFollow(FOLLOW_params_in_methodDeclaration217);
                    params();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            match(input,12,FOLLOW_12_in_methodDeclaration222); if (state.failed) return ;

            match(input,41,FOLLOW_41_in_methodDeclaration226); if (state.failed) return ;

            pushFollow(FOLLOW_methodBody_in_methodDeclaration228);
            methodBody();

            state._fsp--;
            if (state.failed) return ;

            match(input,43,FOLLOW_43_in_methodDeclaration230); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, methodDeclaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "methodDeclaration"



    // $ANTLR start "type"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:86:1: type : ( 'boolean' | 'int' );
    public final void type() throws RecognitionException {
        int type_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:87:2: ( 'boolean' | 'int' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:
            {
            if ( input.LA(1)==28||input.LA(1)==33 ) {
                input.consume();
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, type_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "type"



    // $ANTLR start "returnType"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:89:1: returnType : ( 'void' | type );
    public final void returnType() throws RecognitionException {
        int returnType_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:90:2: ( 'void' | type )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==39) ) {
                alt3=1;
            }
            else if ( (LA3_0==28||LA3_0==33) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:90:4: 'void'
                    {
                    match(input,39,FOLLOW_39_in_returnType256); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:90:13: type
                    {
                    pushFollow(FOLLOW_type_in_returnType260);
                    type();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, returnType_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "returnType"



    // $ANTLR start "params"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:93:1: params : param ( ',' param )* ;
    public final void params() throws RecognitionException {
        int params_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:94:2: ( param ( ',' param )* )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:94:4: param ( ',' param )*
            {
            pushFollow(FOLLOW_param_in_params272);
            param();

            state._fsp--;
            if (state.failed) return ;

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:94:10: ( ',' param )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==15) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:94:12: ',' param
            	    {
            	    match(input,15,FOLLOW_15_in_params276); if (state.failed) return ;

            	    pushFollow(FOLLOW_param_in_params278);
            	    param();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 8, params_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "params"



    // $ANTLR start "param"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:97:1: param : type ID ;
    public final void param() throws RecognitionException {
        int param_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:98:2: ( type ID )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:98:4: type ID
            {
            pushFollow(FOLLOW_type_in_param293);
            type();

            state._fsp--;
            if (state.failed) return ;

            match(input,ID,FOLLOW_ID_in_param295); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 9, param_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "param"



    // $ANTLR start "methodBody"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:101:1: methodBody : ( localDeclaration )* ( statement )* ;
    public final void methodBody() throws RecognitionException {
        int methodBody_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:102:2: ( ( localDeclaration )* ( statement )* )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:102:4: ( localDeclaration )* ( statement )*
            {
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:102:4: ( localDeclaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==28||LA5_0==33) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:102:4: localDeclaration
            	    {
            	    pushFollow(FOLLOW_localDeclaration_in_methodBody306);
            	    localDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:103:3: ( statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID||LA6_0==32||LA6_0==36||LA6_0==40) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:103:3: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_methodBody312);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 10, methodBody_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "methodBody"



    // $ANTLR start "localDeclaration"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:106:1: localDeclaration : type ID ';' ;
    public final void localDeclaration() throws RecognitionException {
        int localDeclaration_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 11) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:107:2: ( type ID ';' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:107:4: type ID ';'
            {
            pushFollow(FOLLOW_type_in_localDeclaration324);
            type();

            state._fsp--;
            if (state.failed) return ;

            match(input,ID,FOLLOW_ID_in_localDeclaration326); if (state.failed) return ;

            match(input,19,FOLLOW_19_in_localDeclaration328); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 11, localDeclaration_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "localDeclaration"



    // $ANTLR start "statement"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:110:1: statement : ( assignStatement | ifStatement | whileStatement | invokeExpStatement | returnStatement ) ;
    public final void statement() throws RecognitionException {
        int statement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 12) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:111:2: ( ( assignStatement | ifStatement | whileStatement | invokeExpStatement | returnStatement ) )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:111:4: ( assignStatement | ifStatement | whileStatement | invokeExpStatement | returnStatement )
            {
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:111:4: ( assignStatement | ifStatement | whileStatement | invokeExpStatement | returnStatement )
            int alt7=5;
            switch ( input.LA(1) ) {
            case ID:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==22) ) {
                    alt7=1;
                }
                else if ( (LA7_1==11||LA7_1==17) ) {
                    alt7=4;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;

                }
                }
                break;
            case 32:
                {
                alt7=2;
                }
                break;
            case 40:
                {
                alt7=3;
                }
                break;
            case 36:
                {
                alt7=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:111:6: assignStatement
                    {
                    pushFollow(FOLLOW_assignStatement_in_statement342);
                    assignStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:112:5: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement348);
                    ifStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:113:5: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement354);
                    whileStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:114:5: invokeExpStatement
                    {
                    pushFollow(FOLLOW_invokeExpStatement_in_statement360);
                    invokeExpStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:115:5: returnStatement
                    {
                    pushFollow(FOLLOW_returnStatement_in_statement366);
                    returnStatement();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 12, statement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "assignStatement"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:119:1: assignStatement : ID '=' exp ';' ;
    public final void assignStatement() throws RecognitionException {
        int assignStatement_StartIndex = input.index();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 13) ) { return ; }

            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:120:2: ( ID '=' exp ';' )
            // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:120:4: ID '=' exp ';'
            {
            match(input,ID,FOLLOW_ID_in_assignStatement382); if (state.failed) return ;

            match(input,22,FOLLOW_22_in_assignStatement384); if (state.failed) return ;

            pushFollow(FOLLOW_exp_in_assignStatement386);
            exp();

            state._fsp--;
            if (state.failed) return ;

            match(input,19,FOLLOW_19_in_assignStatement388); if (state.failed) return ;

            }

        }
         
         /**
          * Eliminate rule error recovery so that all parse errors 
          * cause exceptions to propogate out of the top-level parse
          * method.  
          */

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 13, assignStatement_StartIndex); }

        }
        return ;
    }
    // $ANTLR end "assignStatement"



    // $ANTLR start "ifStatement"
    // /home/edward/workspace/compiler-sjc/src-sjc/sjc/parser/StaticJava.g:123:1: ifStatement : 'if' '(' exp ')' '{' ( statement )* '}' ( 'else' '{' ( statement )* '}' )? ;
    public final void ifStatement() throws RecognitionException {
        int ifStatement_StartIndex = input.index();
